--- a/res/css/style.css
+++ b/res/css/style.css
@@ -308,7 +308,8 @@ div.login div {
   border: none;
 }
 div.login .login_header {
-  background: #999;
+  /* background: #999; */
+  background-color: #c13333;
   border-bottom: 1px solid #1b2236;
   height: 1.5em;
   padding: 0.45em;
@@ -356,7 +357,7 @@ div.login label {
   border-right: solid 1px #a2aac4;
   padding: 2px 0 2px 18px;
   margin: 0.3em 0;
-  width: 12em;
+  width: 20em;
 }
 /* image courtesy of http://www.famfamfam.com/lab/icons/silk/  */
 #authen_passwordfield {
@@ -368,7 +369,7 @@ div.login label {
   border-right: solid 1px #a2aac4;
   padding: 2px 0 2px 18px;
   margin: 0.3em 0;
-  width: 12em;
+  width: 20em;
 }
 #authen_rememberuserfield {
   clear: left;
@@ -626,6 +627,35 @@ div.setup {
 
 div.setup li {
 	padding-bottom:1em;
+}
+
+.info, .success, .warning, .error, .validation {
+	border: 1px solid;
+	margin: 10px;
+	padding: 15px 10px 15px 50px;
+	background-repeat: no-repeat;
+	background-position: 10px center;
+	width: 500px;
+}
+.info {
+	color: #00529B;
+	background-color: #BDE5F8;
+	background-image: url('/images/knob/knob_info.png');
+}
+.success {
+	color: #4F8A10;
+	background-color: #DFF2BF;
+	background-image:url('/images/knob/knob_valid_green.png');
+}
+.warning {
+	color: #9F6000;
+	background-color: #FEEFB3;
+	background-image: url('/images/knob/knob_attention.png');
+}
+.error {
+	color: #D8000C;
+	background-color: #FFBABA;
+	background-image: url('/images/knob/knob_cancel.png');
 }
 
 /*
