--- a/res/css/style.css
+++ b/res/css/style.css
@@ -279,21 +279,79 @@ nav a span {
 	float:right;
 	margin-left:5px;
 }
-nav ul ul { display:none; width:100%; position:absolute; left:0; background:#6a6a6a; }
-nav ul ul li { float:none; }
-nav ul ul a { padding:5px 10px; border-left:none; border-right:none; font-size:14px; }
-nav ul ul a:hover { background-color:#555; }
+nav ul ul {
+	display:none;
+	width:100%;
+	position:absolute;
+	left:0;
+	background:#6a6a6a;
+}
+nav ul ul li {
+	float:none;
+}
+nav ul ul a {
+	padding:5px 10px;
+	border-left:none;
+	border-right:none;
+	font-size:14px;
+}
+nav ul ul a:hover {
+	background-color:#555;
+}
 /* CSS3 */
-.borderradius nav { -moz-border-radius:4px; -webkit-border-radius:4px; border-radius:4px; }
-.cssgradients nav { background-image:-moz-linear-gradient(0% 22px 90deg, #222, #999); background-image:-webkit-gradient(linear, 0% 0%, 0% 70%, from(#999), to(#222)); }
-.boxshadow.rgba nav { -moz-box-shadow:2px 2px 2px rgba(0,0,0,.75); -webkit-box-shadow:2px 2px 2px rgba(0,0,0,.75); box-shadow:2px 2px 2px rgba(0,0,0,.75); }
-.cssgradients nav li:hover { background-image:-moz-linear-gradient(0% 100px 90deg, #999, #222); background-image:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#222), to(#555)); }
-.borderradius nav ul ul { -moz-border-radius-bottomleft:4px; -moz-border-radius-bottomright:4px; -webkit-border-bottom-left-radius:4px; -webkit-border-bottom-right-radius:4px; border-bottom-left-radius:4px; border-bottom-right-radius:4px; }
-.boxshadow.rgba nav ul ul { background-color:rgba(0,0,0,0.8); -moz-box-shadow:2px 2px 2px rgba(0,0,0,.8); -webkit-box-shadow:2px 2px 2px rgba(0,0,0,.8); box-shadow:2px 2px 2px rgba(0,0,0,.8); }
-.rgba nav ul ul li { border-left:1px solid rgba(0,0,0,0.1); border-right:1px solid rgba(0,0,0,0.1); }
-.rgba nav ul ul a:hover { background-color:rgba(85,85,85,.9); }
-.borderradius.rgba nav ul ul li.last { border-left:1px solid rgba(0,0,0,0.1); border-bottom:1px solid rgba(0,0,0,0.1); -moz-border-radius-bottomleft:4px; -moz-border-radius-bottomright:4px; -webkit-border-bottom-left-radius:4px; -webkit-border-bottom-right-radius:4px; border-bottom-left-radius:4px; border-bottom-right-radius:4px; }
-.csstransforms ul a span { -moz-transform:rotate(-180deg);-webkit-transform:rotate(-180deg); }
+.borderradius nav {
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border-radius:4px;
+}
+.cssgradients nav {
+	background-image:-moz-linear-gradient(0% 22px 90deg, #222, #999);
+	background-image:-webkit-gradient(linear, 0% 0%, 0% 70%, from(#999), to(#222));
+}
+.boxshadow.rgba nav {
+	-moz-box-shadow:2px 2px 2px rgba(0,0,0,.75);
+	-webkit-box-shadow:2px 2px 2px rgba(0,0,0,.75);
+	box-shadow:2px 2px 2px rgba(0,0,0,.75);
+}
+.cssgradients nav li:hover {
+	background-image:-moz-linear-gradient(0% 100px 90deg, #999, #222);
+	background-image:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#222), to(#555));
+}
+.borderradius nav ul ul {
+	-moz-border-radius-bottomleft:4px;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-left-radius:4px;
+	-webkit-border-bottom-right-radius:4px;
+	border-bottom-left-radius:4px;
+	border-bottom-right-radius:4px;
+	}
+.boxshadow.rgba nav ul ul {
+	background-color:rgba(0,0,0,0.8);
+	-moz-box-shadow:2px 2px 2px rgba(0,0,0,.8);
+	-webkit-box-shadow:2px 2px 2px rgba(0,0,0,.8);
+	box-shadow:2px 2px 2px rgba(0,0,0,.8);
+}
+.rgba nav ul ul li {
+	border-left:1px solid rgba(0,0,0,0.1);
+	border-right:1px solid rgba(0,0,0,0.1);
+}
+.rgba nav ul ul a:hover {
+	background-color:rgba(85,85,85,.9);
+}
+.borderradius.rgba nav ul ul li.last {
+	border-left:1px solid rgba(0,0,0,0.1);
+	border-bottom:1px solid rgba(0,0,0,0.1);
+	-moz-border-radius-bottomleft:4px;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-left-radius:4px;
+	-webkit-border-bottom-right-radius:4px;
+	border-bottom-left-radius:4px;
+	border-bottom-right-radius:4px;
+}
+.csstransforms ul a span {
+	-moz-transform:rotate(-180deg);
+	-webkit-transform:rotate(-180deg);
+}
 /* TEST */
 #container {
 	/*width: 800px;*/
@@ -321,6 +379,20 @@ nav ul ul a:hover { background-color:#555; }
 
 div #main {
 	min-height: 400px;
+}
+
+#main .login {
+	margin-top: 3em;
+	padding: 1em;
+	color: #fff;
+	background-color:#000;
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border-radius:4px;
+	-moz-box-shadow: 2px 2px 2px #ccc;
+	-webkit-box-shadow: 2px 2px 2px #ccc;
+	box-shadow: 2px 2px 2px #ccc;
+	text-shadow: none;
 }
 
 footer {
