--- a/res/css/style.css
+++ b/res/css/style.css
@@ -381,20 +381,6 @@ div #main {
 	min-height: 400px;
 }
 
-#main .login {
-	margin-top: 3em;
-	padding: 1em;
-	color: #fff;
-	background-color:#000;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
-	border-radius:4px;
-	-moz-box-shadow: 2px 2px 2px #ccc;
-	-webkit-box-shadow: 2px 2px 2px #ccc;
-	box-shadow: 2px 2px 2px #ccc;
-	text-shadow: none;
-}
-
 footer {
 	padding-top: 1.5em;
 	text-align: center;
@@ -412,70 +398,88 @@ footer {
  */
 
 /*
- * Login Form
+ * Login Form START
  * http://woork.blogspot.com/2008/06/clean-and-pure-css-form-design.html
  */
-p, h1, form, button{border:0; margin:0; padding:0;}
-.spacer{clear:both; height:1px;}
-/* ----------- My Form ----------- */
-.loginform {
-margin:0 auto;
-width:400px;
-padding:14px;
+.spacer {
+	clear:both;
+	height:1px;
 }
 
-/* ----------- stylized ----------- */
-#stylized{
-border:solid 2px #b7ddf2;
-background:#ebf4fb;
+.forms {
+	color: #fff;
+	background-color:#000;
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border-radius:4px;
+	-moz-box-shadow: 2px 2px 2px #ccc;
+	-webkit-box-shadow: 2px 2px 2px #ccc;
+	box-shadow: 2px 2px 2px #ccc;
+	text-shadow: none;
+	
+	margin: 3em auto;
+	width:600px;
+	padding:1em;
 }
-#stylized h1 {
-font-size:14px;
-font-weight:bold;
-margin-bottom:8px;
+
+.forms h1 {
+	font-size: 2em;
+	font-weight: bold;
+	margin-bottom: 1em;
+	text-algin: center;
 }
-#stylized p{
-font-size:11px;
-color:#666666;
-margin-bottom:20px;
-border-bottom:solid 1px #b7ddf2;
-padding-bottom:10px;
+.forms p {
+	font-size:11px;
+	color:#666666;
+	margin-bottom:20px;
+	border-bottom:solid 1px #b7ddf2;
+	padding-bottom:10px;
 }
-#stylized label{
-display:block;
-font-weight:bold;
-text-align:right;
-width:140px;
-float:left;
+.forms label {
+	display:block;
+	font-weight:bold;
+	text-align:right;
+	width:200px;
+	float:left;
 }
-#stylized .small{
-color:#666666;
-display:block;
-font-size:11px;
-font-weight:normal;
-text-align:right;
-width:140px;
+.forms .small {
+	color:#666666;
+	display:block;
+	font-size:11px;
+	font-weight:normal;
+	text-align:right;
+	width:200px;
 }
-#stylized input{
-float:left;
-font-size:12px;
-padding:4px 2px;
-border:solid 1px #aacfe4;
-width:200px;
-margin:2px 0 20px 10px;
+.forms input, .forms select {
+	float:left;
+	font-size:12px;
+	padding:4px 2px;
+	border:solid 1px #aacfe4;
+	width:200px;
+	margin:2px 0 20px 10px;
+	color: #ffd800;
+	font-weight: bold;
+	background-color: #000;
 }
-#stylized button{
-clear:both;
-margin-left:150px;
-width:125px;
-height:31px;
-background:#666666 url(img/button.png) no-repeat;
-text-align:center;
-line-height:31px;
-color:#FFFFFF;
-font-size:11px;
-font-weight:bold;
+.forms short {
+	width: 150px;
 }
+.forms button {
+	clear:both;
+	margin-left:220px;
+	width:125px;
+	height:31px;
+	background:#666666 url(img/button.png) no-repeat;
+	text-align:center;
+	line-height:31px;
+	color:#FFFFFF;
+	font-size:11px;
+	font-weight:bold;
+}
+
+/*
+ * Login Form END
+ */
 
 /*
  * Modal Inline Popup START
